k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campusfit-deployment
  labels:
    app: campusfit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: campusfit
  template:
    metadata:
      labels:
        app: campusfit
    spec:
      containers:
        - name: campusfit
          image: adityapraja/campus-fit-docker
          ports:
            - containerPort: 3000
