k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campusfitdb-deploy
  labels:
    app: campusfitdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campusfitdb
  template:
    metadata:
      labels:
        app: campusfitdb
    spec:
      containers:
        - name: campusfitdb
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: campusfit-pvc
