k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campusfit-service
spec:
  type: NodePort
  selector:
    app: campusfit
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30100
