k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campusfitdb-service
spec:
  selector:
    app: campusfitdb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
