k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campusfit-ingress
spec:
  rules:
    - host: "campusfit.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: campusfit-service
                port:
                  number: 30100
